--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
   "name": "vue-ele-form-json",
+  "description": "vue-ele-form 的 json 编辑器",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dream2023/vue-ele-form-json"
+  },
+  "main": "lib/index.js",
+  "homepage": "https://github.com/dream2023/vue-ele-form-json",
+  "keywords": [
+    "vue-ele-form",
+    "json 编辑器",
+    "jsoneditor",
+    "vue-jsoneditor",
+    "element-jsoneditor",
+    "v-jsoneditor"
+  ],
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "v-jsoneditor": "^1.2.0"
   },
   "devDependencies": {
+    "core-js": "^2.6.5",
+    "vue": "^2.6.10",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "element-ui": "^2.10.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
+    "vue-ele-form": "^0.1.2",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,vue}": [
+    "lib/*.{js,vue}": [
       "vue-cli-service lint",
       "git add"
     ]
