--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-ele-form-json-editor",
   "description": "vue-ele-form 的 json 编辑器",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "private": false,
   "scripts": {
@@ -23,6 +23,7 @@
     "v-jsoneditor"
   ],
   "dependencies": {
+    "throttle-debounce": "^2.3.0",
     "v-jsoneditor": "^1.4.1"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "vue": "^2.6.11",
-    "vue-ele-form": "^0.8.25",
+    "vue-ele-form": "^0.8.34",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
